--- a/Client/package.json
+++ b/Client/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "date-fns": "^4.1.0",
+    "formidable": "^3.5.2",
     "next": "^14.2.13",
     "next-auth": "^4.24.8",
     "prisma": "^5.21.1",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20.16.5",
     "@types/react": "^18.3.8",
     "@types/react-color": "^3.0.12",
